# carina

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  go.mod  go.sum
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs-lighthouse.yml  release.yml
apps/carina-cli/: bare.go  bare_invocation_test.go  bare_launch.go  checkpoint.go  checkpoint_test.go  client.go  doctor.go  doctor_test.go  ensure_daemon_reachable_test.go  exitcode.go  exitcode_test.go  headless.go  headless_test.go  init_gate_test.go  main.go  main_test.go  operator.go  operator_test.go  ops.go  ops_test.go  policy_check_test.go  runtime_cmd.go  task_outcome.go  task_outcome_test.go  tui_cmd.go  update_cmd.go  update_cmd_test.go  watch_json.go  watch_json_test.go  workflow.go  workflow_test.go
apps/carina-daemon/: main.go  main_process_unix_test.go  main_test.go
apps/carina-tui/: main.go  main_test.go
apps/carina-worker/: config.go  config_test.go  containment_other.go  containment_unix.go  containment_unix_test.go  containment_windows.go  containment_windows_test.go  executor.go  executor_process_other.go  executor_process_unix.go  executor_process_unix_test.go  executor_process_windows.go  executor_test.go  gateway_client.go  gateway_client_test.go  integration_test.go  main.go  worker.go  worker_test.go
apps/docs/: .gitignore  .npmrc  AUTHORING.md  FEATURE_MAP.md  README.md  astro.config.mjs  lighthouserc.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json
apps/pi-cli/: client.go  main.go
apps/pi-daemon/: main.go
apps/pi-tui/: main.go
apps/pi-worker/: main.go
crates/carina-audit/: Cargo.toml
crates/carina-audit/examples/: audit_bench.rs
crates/carina-audit/src/: lib.rs
crates/carina-index/: Cargo.toml
crates/carina-index/src/: chunker.rs  embed.rs  extract.rs  impact.rs  lang.rs  lib.rs  repomap.rs  search.rs  store.rs  symbols.rs
crates/carina-kernel/: Cargo.toml
crates/carina-kernel/src/: lib.rs  secret.rs
crates/carina-kernel/tests/: index_service_test.rs  service_test.rs
crates/carina-patch/: Cargo.toml
crates/carina-patch/src/: lib.rs
crates/carina-plugin-runtime/: Cargo.toml
crates/carina-policy/: Cargo.toml
crates/carina-policy/src/: lib.rs
crates/pi-audit/: Cargo.toml
crates/pi-audit/src/: lib.rs
crates/pi-kernel/: Cargo.toml
crates/pi-kernel/src/: lib.rs
crates/pi-kernel/tests/: service_test.rs
crates/pi-patch/: Cargo.toml
crates/pi-plugin-runtime/: Cargo.toml
crates/pi-plugin-runtime/src/: host.rs  lib.rs
crates/pi-plugin-runtime/tests/: wasm_plugin_test.rs
crates/pi-policy/: Cargo.toml
crates/spike-tui-ratatui/: Cargo.toml
crates/spike-tui-ratatui/src/: diff.rs  main.rs  rpc.rs
docs/: PRD.md  agent.md  architecture.md  client-platform-boundaries.md  conversation-projection.md  enterprise.md  headless-stream-protocol.md  nebutra-cloud-boundary.md  plugin-model.md  product.md  release.md  roadmap.md  rpc-api.md  runtime-ecosystem.md  security-model.md  tui-session-lifecycle.md  worker-executor.md  workflows.md
docs/brand/: AGENTS.md  README.md  asset-manifest.json  brand-brief.md
docs/deployment/: remote-workers.md
docs/integrations/: hms-memory.md
docs/plans/: 2026-07-07-byok-provider-catalog-design.md  2026-07-07-codex-phase-a-absorption-design.md  2026-07-07-codex-phase-b-risk-review-design.md  2026-07-07-codex-phase-c-approval-overlays-net-diff-design.md  2026-07-07-codex-source-item-stream-absorption.md  2026-07-07-mcp-prompts-command-registry-design.md  2026-07-07-nebutra-cloud-boundary-design.md  2026-07-07-nebutra-device-node-pairing-design.md  2026-07-07-openclaw-gateway-phase-a-design.md  2026-07-07-openclaw-gateway-phase-b-design.md  2026-07-07-openclaw-gateway-phase-c-design.md  2026-07-07-openclaw-gateway-phase-d-design.md  2026-07-07-opencode-agent-command-registry-design.md  2026-07-07-opencode-runtime-quality-upgrade-design.md  2026-07-07-productization-docs-cli-release-design.md  2026-07-07-runtime-provider-adapters-design.md  2026-07-08-gateway-http-runtime-closure-design.md  2026-07-08-headroom-native-integration-design.md  2026-07-08-hermes-memory-absorption-design.md  2026-07-08-release-install-packaging-design.md  2026-07-12-agent-swarm-dag-orchestration-design.md  2026-07-12-openhands-absorption-tradeoffs.md  agent-cli-productization.md  code-intelligence.md  tui-i18n-architecture.md  tui-layout-ux-closure.md  tui-product-ux-closure.md  tui-rich-text.md  tui-stack-decision.md
docs/releases/: 0.6.2.md  0.6.3.md  0.6.4.md  0.6.5.md
docs/research/: absorption-plan.md  absorption-status.md  background-agent-findings.md  carina-extensions-findings.md  claude-code-gap-analysis.md  claude-code-subagent.md  cline-absorption.md  (+11 more)
integrations/: headroom-requirements.in
scripts/: bench-audit.sh  bench-lib.sh  bench.sh  brand_assets.py  build-headroom-bundle.sh  build-zig-tools.sh  check-homebrew-version.sh  ci-gates.sh  coverage.sh  gen_zh_hant.py  generate-bench-repo.py  generate-sbom.sh  install-zig-tool.sh  install.sh  measure-command-ms.py  package-integrations.sh  package-linux.sh  package-npm-bundle.sh  package-npm-release.sh  package-release.sh  package-windows-worker.sh  product-version.go  release-check.sh  release-preflight.sh  render-homebrew-formula.sh  sign-and-notarize-release.sh  test-bench-gate.sh  test-bench-helpers.py  test-build-zig-tools.sh  test-headroom-build-contract.sh  test-homebrew-formula.sh  test-homebrew-install.sh  test-install.sh  test-package-npm-release.sh  test-packaged-conformance.sh  test-platform-packaging.sh  test-release-preflight.sh  test-sign-and-notarize-release.sh  test-verify-integration-packages.sh  test-verify-linux-packages.sh  (+12 more)
sdk/: README.md
sdk/python/: pyproject.toml
sdk/python/src/carina_sdk/: __init__.py
sdk/python/src/pi_sdk/: __init__.py
sdk/python/tests/: test_client.py  test_conformance.py  test_submission_id.py
zig/: build.zig  build.zig.zon
(+842 files in other folders)
