[workspace]
resolver = "2"
members = [
    "crates/carina-kernel",
    "crates/carina-policy",
    "crates/carina-patch",
    "crates/carina-audit",
    "crates/carina-plugin-runtime",
    "crates/carina-index",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Nebutra/carina"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
toml = "0.8"
time = { version = "0.3", features = ["formatting", "serde", "serde-well-known"] }
rusqlite = { version = "0.32", features = ["bundled"] }
streaming-iterator = "0.1"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
carina-kernel = { path = "crates/carina-kernel" }
carina-policy = { path = "crates/carina-policy" }
carina-patch = { path = "crates/carina-patch" }
carina-audit = { path = "crates/carina-audit" }
carina-plugin-runtime = { path = "crates/carina-plugin-runtime" }
carina-index = { path = "crates/carina-index" }
