[package]
name = "carina-patch"
description = "Carina transactional patch engine: lifecycle state machine, conflict detection, rollback pointers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
