[package]
name = "carina-policy"
description = "Carina policy engine: capabilities, permission profiles, command risk classification, workspace boundary"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
