[package]
name = "pi-kernel"
description = "Pi-OS Capability Kernel facade: every side effect flows through here"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pi-policy = { workspace = true }
pi-audit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
