[package]
name = "pi-plugin-runtime"
description = "Pi-OS plugin host: manifest parsing and permission review (WASM engine lands in Phase 4)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pi-policy = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
