[project]
name = "pi-os-sdk"
version = "0.1.0"
description = "Python SDK for the Pi-OS Agent Runtime (JSON-RPC over unix socket)"
license = { text = "MIT" }
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_sdk"]
